--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&family=REM:ital,wght@0,100;0,200;1,100;1,200&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Preahvihear&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
-
+@font-face {
+  font-family: "CookieRun-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/CookieRun-Regular.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 * {
-  font-family: "Lato", sans-serif;
+  font-family: "CookieRun-Regular";
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -22,7 +25,7 @@ h6,
 span {
   color: #242424;
   text-align: center;
-  line-height: 1.25;
+  line-height: 1.8;
 }
 
 h1 {
@@ -89,11 +92,12 @@ li {
 }
 
 .text--green {
-  color: #03c75a;
+  color: #30a26e;
 }
 
 section:nth-child(even) {
-  background-color: #f8f8f8;
+  background-color: #f5f5f5;
+  padding-bottom: 3rem;
 }
 
 .section__title {
@@ -104,17 +108,37 @@ section:nth-child(even) {
 
 .nav_logo {
   vertical-align: bottom;
+  padding-right: 0.3em;
 }
 
-nav {
+.header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  transition: all 300ms ease;
+}
+
+.navbar {
   height: 100px;
   width: 100%;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 12px;
+  padding: 1.25rem 1.5rem;
+}
+
+.header.fixed {
+  background-color: #30a26e;
+
+  box-shadow: 0 2px 8px hsla(0, 0%, 80%, 0.8);
+}
+
+.header.fixed span {
+  color: #fff;
 }
 
 .nav__link--list {
@@ -128,7 +152,7 @@ nav {
 }
 
 .nav__link--anchor-primary {
-  background-color: #03c75a;
+  background-color: #30a26e;
   padding: 8px 20px;
   border-radius: 50px;
   color: white;
@@ -141,7 +165,6 @@ nav {
 
 .personal__logo {
   font-size: 1.6em;
-  color: #03c75a;
   margin: 0 12px;
   font-weight: bold;
 }
@@ -157,6 +180,7 @@ nav {
 .about-me__info {
   display: flex;
   flex-direction: column;
+  margin-top: 8rem;
 }
 
 .about-me__info--container {
@@ -171,9 +195,6 @@ nav {
 .about-me__picture--icon {
   width: 100px;
   height: 100px;
-  /* border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16); */
   margin-bottom: 28px;
   animation: animate-profile-picture 800ms 200ms backwards;
 }
@@ -197,7 +218,7 @@ nav {
 }
 
 .about-me__info--title {
-  margin-bottom: 16px;
+  margin-bottom: 1.5em;
   animation: fade-up 650ms 400ms backwards;
 }
 .about-me__info--para {
@@ -416,7 +437,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 8% 0;
+  padding: 4% 0;
 }
 
 .footer__logo--img {
@@ -435,8 +456,6 @@ footer {
 }
 
 .footer__copyright {
-  height: 11rem;
-  padding-top: 3rem;
   text-align: center;
 }
 
@@ -459,12 +478,51 @@ footer {
   opacity: 1;
 }
 
+.arrow-up-btn {
+  position: fixed;
+  right: 3.5rem;
+  bottom: 3.5rem;
+  display: block;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+  opacity: 0.8;
+}
+
+.navbar__toggleBtn {
+  display: none;
+  position: absolute;
+  right: 32px;
+  font-size: 24px;
+  color: #000;
+}
+
 /* Small phones, tablets, large smartphones */
-@media (max-width: 768px) {
-  nav {
-    height: 68px;
+@media screen and (max-width: 768px) {
+  .navbar__toggleBtn {
+    display: block;
+  }
+  .nav__link--list {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 2.5rem 0 0 0;
+    animation: fade-up 200ms 200ms backwards;
   }
 
+  .personal__logo,
+  .nav__link--list.active {
+    display: flex;
+  }
+
+  .navbar {
+    flex-direction: column;
+  }
+
+  .nav__link {
+    margin-bottom: 1rem;
+  }
   h1 {
     font-size: 28px;
   }
@@ -488,7 +546,7 @@ footer {
 }
 
 /* SMALL PHONES */
-@media (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .nav__link:not(:last-child) {
     display: none;
   }
